+ESTADOS +CORREÇÕES_ESTADOS +SCRIPT TESTE
ADICIONADA PASTA TEMPORÁRIA (FIX_BUILDINGS_FOLDER) (script pra corrigir automaticamente erros no arquivo buildings.txt

# OUTROS #

Estados criados:

- Amapá
- Espírito Santo
- Minas Gerais
- Paraná
- Roraima
- Tocantins

Estados corrigidos:

- Amazonas
- Santa Catarina
- Pará

Manpower corrigidos:

- Amazonas
- Amapá
- Goiás
- Maranhão
- Mato Grosso do Sul
- Minas Gerais
- Pará
- Roraima
- Santa Catarina
- Tocantins

--- a/localisation/braz_por/state_names_l_braz_por.yml
+++ b/localisation/braz_por/state_names_l_braz_por.yml
@@ -505,7 +505,7 @@
  STATE_493: "La Libertad"
  STATE_494: "Ucayali"
  STATE_495: "Amazonas"
- STATE_496: "Minas Gerais"
+ STATE_496: "Pará"
  STATE_497: "Maranhão"
  STATE_498: "Rio Grande do Norte"
  STATE_499: "Bahia"
@@ -951,3 +951,10 @@
  STATE_933: "Ilhas Shetland"
  STATE_934: "Escodra"
  STATE_935: "Acre"
+ STATE_936: "Paraná"
+ STATE_937: "Espírito Santo"
+ STATE_938: "Minas Gerais"
+ STATE_939: "Tocantins"
+ STATE_940: "Piauí"
+ STATE_941: "Amapá"
+ STATE_942: "Roraima"
