--- a/localisation/braz_por/countries_l_braz_por.yml
+++ b/localisation/braz_por/countries_l_braz_por.yml
@@ -1,26 +1,4 @@
 ﻿l_braz_por:
- GER_fascism: "Reich Alemão"
- GER_fascism_DEF: "o Reich Alemão"
- GER_democratic: "República Alemã"
- GER_democratic_DEF: "a República Alemã"
- GER_neutrality: "Império Alemão"
- GER_neutrality_DEF: "o Império Alemão"
- GER_communism: "República Socialista da Alemanha"
- GER_communism_DEF: "a República Socialista da Alemanha"
- GER_fascism_ADJ: "Alemão"
- GER_democratic_ADJ: "Alemão"
- GER_neutrality_ADJ: "Alemão"
- GER_communism_ADJ: "Alemão"
- GER_autonomy_supervised_state: "Zona de ocupação do governo $OVERLORDADJ$"
- GER_autonomy_supervised_state_DEF: "a zona de ocupação do governo $OVERLORDADJ$"
- GER_autonomy_puppet: "Alemanha do governo $OVERLORDADJ$"
- GER_autonomy_puppet_DEF: "Alemanha do governo $OVERLORDADJ$"
- GER_SOV_communism_autonomy_puppet: "Zona de ocupação do governo $OVERLORDADJ$ na Alemanha"
- GER_SOV_communism_autonomy_puppet_DEF: "a zona de ocupação do governo $OVERLORDADJ$ na Alemanha"
- GER_SOV_communism_autonomy_puppet_ADJ: "$OVERLORDADJ$ Alemão(ã)"
- GER: "Alemanha"
- GER_DEF: "Alemanha"
- GER_ADJ: "Alemão(ã)"
  ENG_fascism: "Império Britânico"
  ENG_fascism_DEF: "o Império Britânico"
  ENG_democratic: "Reino Unido"
@@ -189,23 +167,6 @@
  HOL_subject_DEF: "a $HOL$ do governo $OVERLORDADJ$"
  HOL_FRA_democratic_subject: "República Batava"
  HOL_FRA_democratic_subject_DEF: "a República Batava"
- CZE_fascism: "Império Boêmio"
- CZE_fascism_DEF: "o Império Boêmio"
- CZE_democratic: "Checoslováquia"
- CZE_democratic_DEF: "a Checoslováquia"
- CZE_neutrality: "Reino da Boêmia"
- CZE_neutrality_DEF: "o Reino de Boêmia"
- CZE_communism: "República Socialista da Checoslováquia"
- CZE_communism_DEF: "a União Checoslováquia"
- CZE_fascism_ADJ: "Checoslovaco"
- CZE_democratic_ADJ: "Checoslovaco"
- CZE_neutrality_ADJ: "Checoslovaco"
- CZE_communism_ADJ: "Checoslovaco"
- CZE: "Tchecoslováquia"
- CZE_DEF: "a Checoslováquia"
- CZE_ADJ: "Tchecoslovaco(a)"
- CZE_subject: "$CZE$ do governo $OVERLORDADJ$"
- CZE_subject_DEF: "a $CZE$ do governo $OVERLORDADJ$"
  POL_fascism: "Polônia Falangista"
  POL_fascism_DEF: "o Falangismo Polonês"
  POL_democratic: "República Polonesa"
@@ -4192,3 +4153,42 @@
  VOL: "Burquina Fasso"
  VOL_DEF: "a Burquina Fasso"
  VOL_ADJ: "Burquinense"
+ CZE_fascism: "Império Boêmio"
+ CZE_fascism_DEF: "o Império Boêmio"
+ CZE_democratic: "Chéquia"
+ CZE_democratic_DEF: "a Chéquia"
+ CZE_neutrality: "Reino da Boêmia"
+ CZE_neutrality_DEF: "o Reino de Boêmia"
+ CZE_communism: "República Socialista da Checoslováquia"
+ CZE_communism_DEF: "a União Checoslováquia"
+ CZE_fascism_ADJ: "Checo"
+ CZE_democratic_ADJ: "Checoslovaco"
+ CZE_neutrality_ADJ: "Checoslovaco"
+ CZE_communism_ADJ: "Checoslovaco"
+ CZE: "Tchecoslováquia"
+ CZE_DEF: "a Checoslováquia"
+ CZE_ADJ: "Tchecoslovaco(a)"
+ CZE_subject: "$CZE$ do governo $OVERLORDADJ$"
+ CZE_subject_DEF: "a $CZE$ do governo $OVERLORDADJ$"
+ GER_fascism: "Reich Alemão"
+ GER_fascism_DEF: "o Reich Alemão"
+ GER_democratic: "Alemanha"
+ GER_democratic_DEF: "a Alemanha"
+ GER_neutrality: "Império Alemão"
+ GER_neutrality_DEF: "o Império Alemão"
+ GER_communism: "República Socialista da Alemanha"
+ GER_communism_DEF: "a República Socialista da Alemanha"
+ GER_fascism_ADJ: "Alemão"
+ GER_democratic_ADJ: "Alemão"
+ GER_neutrality_ADJ: "Alemão"
+ GER_communism_ADJ: "Alemão"
+ GER_autonomy_supervised_state: "Zona de ocupação do governo $OVERLORDADJ$"
+ GER_autonomy_supervised_state_DEF: "a zona de ocupação do governo $OVERLORDADJ$"
+ GER_autonomy_puppet: "Alemanha do governo $OVERLORDADJ$"
+ GER_autonomy_puppet_DEF: "Alemanha do governo $OVERLORDADJ$"
+ GER_SOV_communism_autonomy_puppet: "Zona de ocupação do governo $OVERLORDADJ$ na Alemanha"
+ GER_SOV_communism_autonomy_puppet_DEF: "a zona de ocupação do governo $OVERLORDADJ$ na Alemanha"
+ GER_SOV_communism_autonomy_puppet_ADJ: "$OVERLORDADJ$ Alemão(ã)"
+ GER: "Alemanha"
+ GER_DEF: "Alemanha"
+ GER_ADJ: "Alemão(ã)"
