[BRASIL] Nova Capital + Novos Estados +Correções
Capital do Brasil alterada para Brasília (GO)

+ADD STATES
Alagoas
Ceará
Paraíba
Pernambuco
Rondônia
Sergipe

FIXED STATES
Espírito Santo
Mato Grosso
Rio Grande do Norte

+MANPOWER CORRIGIDO
Alagoas
Ceará
Espírito Santo
Mato Grosso
Paraíba
Pernambuco
Rio Grande do Norte
Rondônia
Sergipe

--- a/localisation/braz_por/victory_points_l_braz_por.yml
+++ b/localisation/braz_por/victory_points_l_braz_por.yml
@@ -1204,3 +1204,5 @@
  VICTORY_POINTS_6142_SWE: "Enare"
  VICTORY_POINTS_12512: "Nuuk"
  VICTORY_POINTS_13003: "Tórshavn"
+ #MOD
+ VICTORY_POINTS_5208: "Brasília"
