--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -958,3 +958,9 @@
  STATE_940: "Piauí"
  STATE_941: "Amapá"
  STATE_942: "Roraima"
+ STATE_943: "Sergipe"
+ STATE_944: "Alagoas"
+ STATE_945: "Ceará"
+ STATE_946: "Paraiba"
+ STATE_947: "Pernambuco"
+ STATE_948: "Rondonia"
