--- a/localisation/braz_por/state_names_l_braz_por.yml
+++ b/localisation/braz_por/state_names_l_braz_por.yml
@@ -168,7 +168,7 @@
  STATE_160: "Venécia"
  STATE_161: "Emília-Romanha"
  STATE_162: "Toscana"
- STATE_163: "Zadar"
+ STATE_163:0 "Zara"
  STATE_163_ITA: "Zara"
  STATE_164: "Dodecaneso"
  STATE_164_ITA: "Dodecaneso"
@@ -958,3 +958,9 @@
  STATE_940: "Piauí"
  STATE_941: "Amapá"
  STATE_942: "Roraima"
+ STATE_943: "Sergipe"
+ STATE_944: "Alagoas"
+ STATE_945: "Ceará"
+ STATE_946: "Paraiba"
+ STATE_947: "Pernambuco"
+ STATE_948: "Rondonia"
