--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -951,3 +951,17 @@
  STATE_933: "Shetland Islands"
  STATE_934: "Shkodër"
  STATE_935: "Acre"
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ STATE_949: "Ceuta"
