--- a/localisation/braz_por/state_names_l_braz_por.yml
+++ b/localisation/braz_por/state_names_l_braz_por.yml
@@ -696,7 +696,7 @@
  STATE_684: "Ilhas Carolinas"
  STATE_685: "Canal do Panamá"
  STATE_686: "Porto Rico"
- STATE_687: "Guiana Britânica"
+ STATE_687: "Guiana"
  STATE_688: "Chaco Boreal"
  STATE_689: "Jamaica"
  STATE_690: "Norte das Bahamas"
