--- a/localisation/braz_por/victory_points_l_braz_por.yml
+++ b/localisation/braz_por/victory_points_l_braz_por.yml
@@ -468,7 +468,7 @@
  VICTORY_POINTS_4641: "Porto Príncipe"
  VICTORY_POINTS_7660: "Santo Domingo"
  VICTORY_POINTS_4598: "Santiago de los Caballeros"
- VICTORY_POINTS_12885: "Cayenne"
+ VICTORY_POINTS_12885: "Caiena"
  VICTORY_POINTS_10747: "Bogotá"
  VICTORY_POINTS_2023: "Medellín"
  VICTORY_POINTS_12790: "Cartagena"
