--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -1933,8 +1933,8 @@
  GDL_ADJ:0 "Guadeloupean"
  GYA_fascism:1 "Great Guyana"
  GYA_fascism_DEF:1 "Great Guyana"
- GYA_democratic:1 "Co-operative Republic of Guyana"
- GYA_democratic_DEF:1 "the Co-operative Republic of Guyana"
+ GYA_democratic:1 "Guyana"
+ GYA_democratic_DEF:1 "the Guyana"
  GYA_neutrality:0 "Guyana"
  GYA_neutrality_DEF:0 "Guyana"
  GYA_communism:1 "Indo-Guyanese Union"
@@ -2083,8 +2083,8 @@
  SRL_ADJ:0 "Sri Lankan"
  SUR_fascism:1 "Surinam Unitary State"
  SUR_fascism_DEF:1 "the Surinam Unitary State"
- SUR_democratic:1 "Republic of Suriname"
- SUR_democratic_DEF:1 "the Republic of Suriname"
+ SUR_democratic:1 "Suriname"
+ SUR_democratic_DEF:1 "the Suriname"
  SUR_neutrality:0 "Suriname"
  SUR_neutrality_DEF:0 "Suriname"
  SUR_communism:1 "Surinen Democratic Republic"
