Squashed commit of the following:
commit 2822f96fbdc594886091c093b89773a33eb26946
Merge: 09dc5a0 df82f84
Author: Fernandoydy <fernandoydygamer076@gmail.com>
Date:   Mon Feb 26 09:51:58 2024 -0300

    Merge branch 'main' into fer-dev

commit 09dc5a0252763dd0ef8f2bc0f54f042d62dc3c65
Author: Fernandoydy <fernandoydygamer076@gmail.com>
Date:   Mon Feb 26 09:50:50 2024 -0300

    Suriname + Guianas

    Nome da capital da Guiana Francesa traduzida (Caiena)

    Core e Manpower Corrigidos:
    Guiana
    Guiana Francesa
    Suriname

--- a/localisation/braz_por/countries_l_braz_por.yml
+++ b/localisation/braz_por/countries_l_braz_por.yml
@@ -1878,8 +1878,8 @@
  GDL_ADJ: "Guadalupense"
  GYA_fascism: "Grande Guiana"
  GYA_fascism_DEF: "a Grande Guiana"
- GYA_democratic: "Republica Cooperativa da Guiana"
- GYA_democratic_DEF: "a Republica Cooperativa da Guiana"
+ GYA_democratic: "Guiana"
+ GYA_democratic_DEF: "a Guiana"
  GYA_neutrality: "Guiana"
  GYA_neutrality_DEF: "a Guiana"
  GYA_communism: "União Indo-Guianesa"
@@ -2028,8 +2028,8 @@
  SRL_ADJ: "Cingalês(a)"
  SUR_fascism: "Estado Unitário do Suriname"
  SUR_fascism_DEF: "o Estado Unitário do Suriname"
- SUR_democratic: "República do Suriname"
- SUR_democratic_DEF: "a República do Suriname"
+ SUR_democratic: "Suriname"
+ SUR_democratic_DEF: "o Suriname"
  SUR_neutrality: "Suriname"
  SUR_neutrality_DEF: "o Suriname"
  SUR_communism: "República Democrática de Surinen"
