Novos Estados na Argentina
Estados:
Terra do Fogo
Santa Cruz
Chubut
La Pampa
Buenos Aires

obs: podem haver erros de buildings e rockesite/airbase
ARGENTINA INCOMPLETA!

--- a/localisation/braz_por/state_names_l_braz_por.yml
+++ b/localisation/braz_por/state_names_l_braz_por.yml
@@ -287,7 +287,7 @@
  STATE_275: "Transvaal"
  STATE_276: "Sul de Ontario"
  STATE_277: "Cidade do México"
- STATE_278: "Pampas"
+ STATE_278: "Buenos Aires"
  STATE_279: "Santiago"
  STATE_280: "Mato Grosso"
  STATE_281: "Maldivas"
@@ -521,7 +521,7 @@
  STATE_509: "Chaco Austral"
  STATE_510: "Mesopotâmia"
  STATE_511: "Mendoza"
- STATE_512: "Patagônia"
+ STATE_512: "Rio Negro"
  STATE_513: "Tlemcen"
  STATE_514: "Deserto da Argélia"
  STATE_515: "Sul do Saara"
@@ -965,3 +965,7 @@
  STATE_947: "Pernambuco"
  STATE_948: "Rondonia"
  STATE_949: "Ceuta"
+ STATE_950: "Terra do Fogo"
+ STATE_951: "Santa Cruz"
+ STATE_952: "Chubut"
+ STATE_953: "La Pampa"
