--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -287,7 +287,7 @@
  STATE_275:0 "Transvaal"
  STATE_276:0 "Southern Ontario"
  STATE_277:0 "Mexico City"
- STATE_278:0 "Pampas"
+ STATE_278:0 "Buenos Aires"
  STATE_279:0 "Santiago"
  STATE_280:0 "Mato Grosso"
  STATE_281:0 "Maldives"
@@ -521,7 +521,7 @@
  STATE_509:0 "Chaco Austral"
  STATE_510:0 "Mesopotamia"
  STATE_511:0 "Mendoza"
- STATE_512:0 "Patagonia"
+ STATE_512:0 "Río Negro"
  STATE_513:0 "Tlemcen"
  STATE_514:0 "Algerian Desert"
  STATE_515:0 "Southern Sahara"
@@ -965,3 +965,7 @@
  STATE_947: "Pernambuco"
  STATE_948: "Rondonia"
  STATE_949: "Ceuta"
+ STATE_950: "Tierra del Fuego"
+ STATE_951: "Santa Cruz"
+ STATE_952: "Chubut"
+ STATE_953: "La Pampa"
