Todos os Estados da Argentina
Estados Corrigidos (Argentina):
La Pampa
Rio Negro

Estados Criados:
Corrientes
Misiones
Salta
Jujuy
Formosa
Santiago del Estero
santa Fe
Catamarca
Cordoba
La Rioja
San Luis
Neuquén
San Juan

--- a/localisation/braz_por/state_names_l_braz_por.yml
+++ b/localisation/braz_por/state_names_l_braz_por.yml
@@ -517,9 +517,9 @@
  STATE_505: "Goiás"
  STATE_506: "Antofagasta"
  STATE_507: "Magalhães"
- STATE_508: "Tucuman"
- STATE_509: "Chaco Austral"
- STATE_510: "Mesopotâmia"
+ STATE_508: "Tucumã"
+ STATE_509: "Chaco"
+ STATE_510: "Entre Rios"
  STATE_511: "Mendoza"
  STATE_512: "Rio Negro"
  STATE_513: "Tlemcen"
@@ -969,3 +969,16 @@
  STATE_951: "Santa Cruz"
  STATE_952: "Chubut"
  STATE_953: "La Pampa"
+ STATE_954: "Corrientes"
+ STATE_955: "Misiones"
+ STATE_956: "Salta"
+ STATE_957: "Jujuy"
+ STATE_958: "Formosa"
+ STATE_959: "Santiago del Estero"
+ STATE_960: "Santa Fé"
+ STATE_961: "Catamarca"
+ STATE_962: "Córdova"
+ STATE_963: "La Rioja"
+ STATE_964: "San Luis"
+ STATE_965: "Neuquén"
+ STATE_966: "San Juan"
