--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -517,9 +517,9 @@
  STATE_505:1 "Goiás"
  STATE_506:0 "Antofagasta"
  STATE_507:0 "Magallanes"
- STATE_508:0 "Tucuman"
- STATE_509:0 "Chaco Austral"
- STATE_510:0 "Mesopotamia"
+ STATE_508:0 "Tucumán"
+ STATE_509:0 "Chaco"
+ STATE_510:0 "Entre Ríos"
  STATE_511:0 "Mendoza"
  STATE_512:0 "Río Negro"
  STATE_513:0 "Tlemcen"
@@ -969,3 +969,16 @@
  STATE_951: "Santa Cruz"
  STATE_952: "Chubut"
  STATE_953: "La Pampa"
+ STATE_954: "Corrientes"
+ STATE_955: "Misiones"
+ STATE_956: "Salta"
+ STATE_957: "Jujuy"
+ STATE_958: "Formosa"
+ STATE_959: "Santiago del Estero"
+ STATE_960: "Santa Fe"
+ STATE_961: "Catamarca"
+ STATE_962: "Córdoba"
+ STATE_963: "La Rioja"
+ STATE_964: "San Luis"
+ STATE_965: "Neuquén"
+ STATE_966: "San Juan"
