Sudão do Sul traduzido p/ inglês

--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -4198,3 +4198,19 @@
  JAN_DEF: "the Island of Jan Mayen"
  JAN_ADJ: "Polar"
  
+ # South Sudan #
+ SSD_fascism: "South Sudan"
+ SSD_fascism_DEF: "South Sudan"
+ SSD_democratic: "Republic of Sudan"
+ SSD_democratic_DEF: "the Republic of Sudan"
+ SSD_neutrality: "South Sudan"
+ SSD_neutrality_DEF: "South Sudan"
+ SSD_communism: "South Sudan Commune"
+ SSD_communism_DEF: "the South Sudan Commune"
+ SSD_fascism_ADJ: "South Sudan"
+ SSD_democratic_ADJ: "South Sudanese"
+ SSD_neutrality_ADJ: "South Sudanese"
+ SSD_communism_ADJ: "South Sudanese"
+ SSD: "South Sudan"
+ SSD_DEF: "South Sudan"
+ SSD_ADJ: "South Sudanese"
