Asia toda concerta
Falta brunei, concertar a coreia e chipre

--- a/localisation/braz_por/countries_l_braz_por.yml
+++ b/localisation/braz_por/countries_l_braz_por.yml
@@ -1315,21 +1315,6 @@
  MEN: "Mengkukuo"
  MEN_DEF: "Mengkukuo"
  MEN_ADJ: "Mengjiang"
- KOR_fascism: "Império Coreano"
- KOR_fascism_DEF: "o Império Coreano"
- KOR_democratic: "República da Coréia"
- KOR_democratic_DEF: "a República da Coréia"
- KOR_neutrality: "República Popular da Coreia"
- KOR_neutrality_DEF: "a República Popular da Coreia"
- KOR_communism: "República Democrática Popular da Coreia"
- KOR_communism_DEF: "a República Democrática Popular da Coreia"
- KOR_fascism_ADJ: "Coreano"
- KOR_democratic_ADJ: "Coreano"
- KOR_neutrality_ADJ: "Coreano"
- KOR_communism_ADJ: "Coreano"
- KOR: "a República da Coréia"
- KOR_DEF: "a República da Coréia"
- KOR_ADJ: "Coreano(a)"
  SER_fascism: "Império Sérvio"
  SER_fascism_DEF: "o Império Sérvio"
  SER_ITA_fascism_subject: "Protetorado da Sérvia"
@@ -4192,3 +4177,33 @@
  GER: "Alemanha"
  GER_DEF: "Alemanha"
  GER_ADJ: "Alemão(ã)"
+ PRK_communism: "Coreia do Norte"
+ PRK_communism_DEF: "a Coreia do Norte"
+ PRK_communism_ADJ: "Norte-Coreano"
+ PRK_democratic: "República Democrática da Coreia"
+ PRK_democratic_DEF: "a República Democrática da Coreia"
+ PRK_democratic_ADJ: "Norte-Coreano"
+ PRK_fascism: "Império Coreano"
+ PRK_fascism_DEF: "o Império Coreano"
+ PRK_fascism_ADJ: "Norte-Coreano"
+ PRK_neutrality: "Coreia do Norte"
+ PRK_neutrality_DEF: "a Coreia do Norte"
+ PRK_neutrality_ADJ: "Norte-Coreano"
+ PRK: "Coreia do Norte"
+ PRK_DEF: "a Coreia do Norte"
+ PRK_ADJ: "Norte-Coreano"
+ KOR_fascism: "Império Sul-Coreamo"
+ KOR_fascism_DEF: "o Império Sul-Coreamo"
+ KOR_democratic: "Coreia do Sul"
+ KOR_democratic_DEF: "a Coreia do Sul"
+ KOR_neutrality: "República da Coreia"
+ KOR_neutrality_DEF: "a República da Coreia"
+ KOR_communism: "República Democrática da Coreia"
+ KOR_communism_DEF: "a República Democrática da Coreia"
+ KOR_fascism_ADJ: "Sul-Coreano"
+ KOR_democratic_ADJ: "Sul-Coreano"
+ KOR_neutrality_ADJ: "Sul-Coreano"
+ KOR_communism_ADJ: "Sul-Coreano"
+ KOR: "Coreia do Sul"
+ KOR_DEF: "a Coreia do Sul"
+ KOR_ADJ: "Sul-Coreano"
