--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -1355,21 +1355,6 @@
  MEN:0 "Mengkukuo"
  MEN_DEF:0 "Mengkukuo"
  MEN_ADJ:0 "Mengjiang"
- KOR_fascism:0 "Independent Korean Governorate"
- KOR_fascism_DEF:0 "the Independent Korean Governorate"
- KOR_democratic:0 "Korea"
- KOR_democratic_DEF:0 "Korea"
- KOR_neutrality:1 "People's Republic of Korea"
- KOR_neutrality_DEF:1 "the People's Republic of Korea"
- KOR_communism:0 "Democratic People's Republic of Korea"
- KOR_communism_DEF:0 "the Democratic People's Republic of Korea"
- KOR_fascism_ADJ:0 "Korean"
- KOR_democratic_ADJ:0 "Korean"
- KOR_neutrality_ADJ:0 "Korean"
- KOR_communism_ADJ:0 "Korean"
- KOR:0 "Korea"
- KOR_DEF:0 "Korea"
- KOR_ADJ:0 "Korean"
  SER_fascism:0 "Serbian Empire"
  SER_fascism_DEF:0 "the Serbian Empire"
  SER_ITA_fascism_subject:0 "Protectorate of Serbia"
@@ -4214,3 +4199,33 @@
  SSD: "South Sudan"
  SSD_DEF: "South Sudan"
  SSD_ADJ: "South Sudanese"
+ PRK_communism: "North Korea"
+ PRK_communism_DEF: "the North Korea"
+ PRK_communism_ADJ: "North Korean"
+ PRK_democratic: "Democratic People's Republic of Korea"
+ PRK_democratic_DEF: "the Democratic People's Republic of Korea"
+ PRK_democratic_ADJ: "North Korean"
+ PRK_fascism: "Korean Empire"
+ PRK_fascism_DEF: "the Korean Empire"
+ PRK_fascism_ADJ: "North Korean"
+ PRK_neutrality: "North Korea"
+ PRK_neutrality_DEF: "the North Korea"
+ PRK_neutrality_ADJ: "North Korean"
+ PRK: "North Korea"
+ PRK_DEF: "the North Korea"
+ PRK_ADJ: "North Korean"
+ KOR_fascism: "South Korean Empire"
+ KOR_fascism_DEF: "the South Korean Empire"
+ KOR_democratic: "South Korea"
+ KOR_democratic_DEF: "the South Korea"
+ KOR_neutrality: "Republic of Korea"
+ KOR_neutrality_DEF: "the Republic of Korea"
+ KOR_communism: "Democratic People's Republic of Korea"
+ KOR_communism_DEF: "the Democratic People's Republic of Korea"
+ KOR_fascism_ADJ: "South Korean"
+ KOR_democratic_ADJ: "South Korean"
+ KOR_neutrality_ADJ: "South Korean"
+ KOR_communism_ADJ: "South Korean"
+ KOR: "South Korea"
+ KOR_DEF: "the South Korea"
+ KOR_ADJ: "South Korean"
