Alguns mini paises adicionados
Brunei, territorio pro vaticano, san marino e liechtenstein

--- a/localisation/braz_por/countries_l_braz_por.yml
+++ b/localisation/braz_por/countries_l_braz_por.yml
@@ -4207,3 +4207,24 @@
  KOR: "Coreia do Sul"
  KOR_DEF: "a Coreia do Sul"
  KOR_ADJ: "Sul-Coreano"
+ BRU: "Brunei"
+ BRU_DEF: "o Brunei"
+ BRU_ADJ: "Bruneano"
+ BRU_neutrality: "Brunei"
+ BRU_neutrality_DEF: "o Brunei"
+ BRU_neutrality_ADJ: "Bueneano"
+ BRU_communism: "República Popular do Brunei"
+ BRU_communism_DEF: "a República Popular do Brunei"
+ BRU_communism_ADJ: "Bruneano"
+ BRU_democratic: "República do Brunei"
+ BRU_democratic_DEF: "a república do Brunei"
+ BRU_democratic_ADJ: "Bruneano"
+ BRU_fascism: "Império do Brunei"
+ BRU_fascism_DEF: "o Império do Brunei"
+ BRU_fascism_ADJ: "Bruneano"
+ SMR: "San Marino"
+ SMR_DEF: "o San Marino"
+ SMR_ADJ: "Samarinês"
+ LIE: "Liechtenstein"
+ LIE_DEF: "o Liechtenstein"
+ LIE_ADJ: "liechtensteinense"
