--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -4229,3 +4229,24 @@
  KOR: "South Korea"
  KOR_DEF: "the South Korea"
  KOR_ADJ: "South Korean"
+ BRU: "Brunei"
+ BRU_DEF: "the Brunei"
+ BRU_ADJ: "Brunean"
+ BRU_neutrality: "Brunei"
+ BRU_neutrality_DEF: "the Brunei"
+ BRU_neutrality_ADJ: "Brunean"
+ BRU_communism: "People's Republic of Brunei"
+ BRU_communism_DEF: "the People's Republic of Brunei"
+ BRU_communism_ADJ: "Brunean"
+ BRU_democratic: "Republic of Brunei"
+ BRU_democratic_DEF: "the Republic of Brunei"
+ BRU_democratic_ADJ: "Brunean"
+ BRU_fascism: "Brunei Empire"
+ BRU_fascism_DEF: "the Brunei Empire"
+ BRU_fascism_ADJ: "Brunean"
+ SMR: "San Marino"
+ SMR_DEF: "the San Marino"
+ SMR_ADJ: "Sammarinese"
+ LIE: "Liechtenstein"
+ LIE_DEF: "the Liechtenstein"
+ LIE_ADJ: "Liechtensteinian"
