Localization Fixes + New States + Manpower FIXES
All buildings FIXED!
Alguns erros de STATES ainda...

Localisation:
Nome da Ucrânia arrumado (ENG/PT)
Nome do Alasca corrigido (PT)
Core do Hawaii corrigido

Novos Estados (USA):
Connecticut
Massachussets
Rhode Island
Vermont
New Hampshire

Manpower Corrigido (BRA):
Rio Grande do Sul
Rio Grande do Norte
Rio de Janeiro
São Paulo
Bahia

Manpower Corrigido (USA):
Todos os estados

--- a/localisation/braz_por/countries_l_braz_por.yml
+++ b/localisation/braz_por/countries_l_braz_por.yml
@@ -1576,8 +1576,8 @@
  MNT_ADJ: "Montenegrino(a)"
  UKR_fascism: "Ucrânia"
  UKR_fascism_DEF: "a Ucrânia"
- UKR_democratic: "República da Ucrânia"
- UKR_democratic_DEF: "a República da Ucrânia"
+ UKR_democratic: "Ucrânia"
+ UKR_democratic_DEF: "a Ucrânia"
  UKR_neutrality: "Ucrânia"
  UKR_neutrality_DEF: "a Ucrânia"
  UKR_communism: "República Socialista Ucraniana"
