--- a/localisation/braz_por/state_names_l_braz_por.yml
+++ b/localisation/braz_por/state_names_l_braz_por.yml
@@ -472,7 +472,7 @@
  STATE_460: "Constantina"
  STATE_461: "Casablanca"
  STATE_462: "Marraquexe"
- STATE_463: "Alaska"
+ STATE_463: "Alasca"
  STATE_464: "Nova Escócia"
  STATE_465: "Nova Brunswick"
  STATE_466: "Nord du Quebec"
@@ -982,3 +982,13 @@
  STATE_964: "San Luis"
  STATE_965: "Neuquén"
  STATE_966: "San Juan"
+ STATE_967: "Connecticut"
+ STATE_968: "Massachusetts"
+ STATE_969: "Rhode Island"
+ STATE_970: "Vermont"
+ STATE_971: "Nova Hampshire"
+ STATE_972: "Delaware"
+ STATE_973: "Brunei"
+ STATE_974: "San Marino"
+ STATE_975: "Vaticano"
+ STATE_976: "Liechtenstein"
