--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -982,3 +982,13 @@
  STATE_964: "San Luis"
  STATE_965: "Neuquén"
  STATE_966: "San Juan"
+ STATE_967: "Connecticut"
+ STATE_968: "Massachusetts"
+ STATE_969: "Rhode Island"
+ STATE_970: "Vermont"
+ STATE_971: "New Hampshire"
+ STATE_972: "Delaware"
+ STATE_973: "Brunei"
+ STATE_974: "San Marino"
+ STATE_975: "Vatican"
+ STATE_976: "Liechtenstein"
