--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -1616,8 +1616,8 @@
  MNT_ADJ:0 "Montenegrin"
  UKR_fascism:0 "Ukraine"
  UKR_fascism_DEF:0 "Ukraine"
- UKR_democratic:0 "Republic of Ukraine"
- UKR_democratic_DEF:0 "the Republic of Ukraine"
+ UKR_democratic:0 "Ukraine"
+ UKR_democratic_DEF:0 "the Ukraine"
  UKR_neutrality:0 "Ukraine"
  UKR_neutrality_DEF:0 "Ukraine"
  UKR_communism:1 "Ukrainian Socialist Republic"
