Chipre criado e de Brinde bug do marvel concertado

--- a/localisation/braz_por/countries_l_braz_por.yml
+++ b/localisation/braz_por/countries_l_braz_por.yml
@@ -2154,13 +2154,13 @@
  CYP_neutrality_DEF: "o Chipre"
  CYP_communism: "República Popular Democrática Cipriota"
  CYP_communism_DEF: "a República Popular Democrática Cipriota"
- CYP_fascism_ADJ: "Cipriota"
- CYP_democratic_ADJ: "Cipriota"
- CYP_neutrality_ADJ: "Cipriota"
- CYP_communism_ADJ: "Cipriota"
+ CYP_fascism_ADJ: "Grego-Cipriota"
+ CYP_democratic_ADJ: "Grego-Cipriota"
+ CYP_neutrality_ADJ: "Grego-Cipriota"
+ CYP_communism_ADJ: "Grego-Cipriota"
  CYP: "Chipre"
  CYP_DEF: "o Chipre"
- CYP_ADJ: "Cipriota"
+ CYP_ADJ: "Grego-Cipriota"
  MLT_fascism: "Décima Cruzada"
  MLT_fascism_DEF: "a Décima Cruzada"
  MLT_democratic: "Malta"
@@ -3949,25 +3949,6 @@
  LBV_democratic_ADJ: "Lombardo-vêneto(a)"
  LBV_communism_ADJ: "Transpadano(a)"
  LBV_neutrality_ADJ: "Lombardo-vêneto(a)"
- PAP: "Estados Papais"
- PAP_fascism: "Reino de Deus"
- PAP_fascism_DEF: "o Reino de Deus"
- PAP_democratic: "República Romana"
- PAP_democratic_DEF: "a República Romana"
- PAP_communism: "República Popular Romana"
- PAP_communism_DEF: "a República Popular Romana"
- PAP_neutrality: "Estados Papais"
- PAP_neutrality_DEF: "os Estados Papais"
- PAP_subject: "Vaticano"
- PAP_subject_DEF: "o Estado do Vaticano"
- PAP_autonomy_supervised_state: "Zona de Ocupação do governo $OVERLORDADJ$ de Roma"
- PAP_autonomy_supervised_state_DEF: "a Zona de Ocupação do governo $OVERLORDADJ$ de Roma"
- PAP_fascism_ADJ: "Papal"
- PAP_democratic_ADJ: "Romano(a)"
- PAP_communism_ADJ: "Romano(a)"
- PAP_neutrality_ADJ: "Papal"
- PAP_subject_ADJ: "Vaticano"
- PAP_autonomy_supervised_state_ADJ: "Romano(a)"
  TOS: "Grão-ducado da Toscana"
  TOS_fascism: "República Social Etrusca"
  TOS_fascism_DEF: "a República Social Etrusca"
@@ -4077,7 +4058,12 @@
  JAN: "Jan Mayen"
  JAN_DEF: "a Ilha de Jan Mayen"
  JAN_ADJ: "Polar"
+ 
+ #########
  ## mod ##
+ ######### 
+
+ ## Sudão do Sul
  SSD_fascism: "Sudão do Sul"
  SSD_fascism_DEF: "o Sudão do Sul"
  SSD_democratic: "República do Sudão"
@@ -4093,6 +4079,7 @@
  SSD: "Sudão do Sul"
  SSD_DEF: "o Sudão do Sul"
  SSD_ADJ: "Sul-Sudanês(a)"
+ ## DR. Congo ##
  COG_fascism: "Império da África Central"
  COG_fascism_DEF: "o Império da África Central"
  COG_democratic: "República do Congo Oriental"
@@ -4108,6 +4095,7 @@
  COG: "República Democrática do Congo"
  COG_DEF: "a República Democrática do Congo"
  COG_ADJ: "Congolês"
+ ## Somália ##
  SOM_fascism: "Império Ajuraan"
  SOM_fascism_DEF: "o Império Ajuraan"
  SOM_democratic: "Somália"
@@ -4123,6 +4111,7 @@
  SOM: "Somália"
  SOM_DEF: "a Somália"
  SOM_ADJ: "Somali"
+ ## Burkina Faso ##
  VOL_fascism: "Autoridade de Alto Volta"
  VOL_fascism_DEF: "a Autoridade de Alto Volta"
  VOL_democratic: "Burkina Faso"
@@ -4138,6 +4127,7 @@
  VOL: "Burquina Fasso"
  VOL_DEF: "a Burquina Fasso"
  VOL_ADJ: "Burquinense"
+ ## Tchéquia ##
  CZE_fascism: "Império Boêmio"
  CZE_fascism_DEF: "o Império Boêmio"
  CZE_democratic: "Chéquia"
@@ -4155,6 +4145,7 @@
  CZE_ADJ: "Tchecoslovaco(a)"
  CZE_subject: "$CZE$ do governo $OVERLORDADJ$"
  CZE_subject_DEF: "a $CZE$ do governo $OVERLORDADJ$"
+ ## Alemanha ##
  GER_fascism: "Reich Alemão"
  GER_fascism_DEF: "o Reich Alemão"
  GER_democratic: "Alemanha"
@@ -4177,6 +4168,7 @@
  GER: "Alemanha"
  GER_DEF: "Alemanha"
  GER_ADJ: "Alemão(ã)"
+ ## Coreia do Norte ##
  PRK_communism: "Coreia do Norte"
  PRK_communism_DEF: "a Coreia do Norte"
  PRK_communism_ADJ: "Norte-Coreano"
@@ -4192,6 +4184,7 @@
  PRK: "Coreia do Norte"
  PRK_DEF: "a Coreia do Norte"
  PRK_ADJ: "Norte-Coreano"
+ ## Coreia do Sul ##
  KOR_fascism: "Império Sul-Coreamo"
  KOR_fascism_DEF: "o Império Sul-Coreamo"
  KOR_democratic: "Coreia do Sul"
@@ -4207,6 +4200,7 @@
  KOR: "Coreia do Sul"
  KOR_DEF: "a Coreia do Sul"
  KOR_ADJ: "Sul-Coreano"
+ ## Brunei ## 
  BRU: "Brunei"
  BRU_DEF: "o Brunei"
  BRU_ADJ: "Bruneano"
@@ -4222,9 +4216,35 @@
  BRU_fascism: "Império do Brunei"
  BRU_fascism_DEF: "o Império do Brunei"
  BRU_fascism_ADJ: "Bruneano"
+ ## San marino ##
  SMR: "San Marino"
  SMR_DEF: "o San Marino"
  SMR_ADJ: "Samarinês"
+ ## Liechtenstein ##
  LIE: "Liechtenstein"
  LIE_DEF: "o Liechtenstein"
  LIE_ADJ: "liechtensteinense"
+ ## República Turca do Norte do Chipre ##
+ RTC: "República Turca do Norte do Chipre"
+ RTC_DEF: "a República Turca do Norte do Chipre"
+ RTC_ADJ: "Turco-Cipriota"
+ ## Vaticano ##
+ PAP: "Vaticano"
+ PAP_fascism: "Reino de Deus"
+ PAP_fascism_DEF: "o Reino de Deus"
+ PAP_democratic: "República Romana"
+ PAP_democratic_DEF: "a República Romana"
+ PAP_communism: "República Popular Romana"
+ PAP_communism_DEF: "a República Popular Romana"
+ PAP_neutrality: "Vaticano"
+ PAP_neutrality_DEF: "o Vaticano"
+ PAP_subject: "Vaticano"
+ PAP_subject_DEF: "o Estado do Vaticano"
+ PAP_autonomy_supervised_state: "Zona de Ocupação do governo $OVERLORDADJ$ de Roma"
+ PAP_autonomy_supervised_state_DEF: "a Zona de Ocupação do governo $OVERLORDADJ$ de Roma"
+ PAP_fascism_ADJ: "Vaticano"
+ PAP_democratic_ADJ: "Vaticano"
+ PAP_communism_ADJ: "Vaticano"
+ PAP_neutrality_ADJ: "Vaticano"
+ PAP_subject_ADJ: "Vaticano"
+ PAP_autonomy_supervised_state_ADJ: "Vaticano"
