--- a/localisation/braz_por/state_names_l_braz_por.yml
+++ b/localisation/braz_por/state_names_l_braz_por.yml
@@ -992,3 +992,6 @@
  STATE_974: "San Marino"
  STATE_975: "Vaticano"
  STATE_976: "Liechtenstein"
+ STATE_977: "Norte do Chipre"
+ STATE_978: "Akrotiri"
+ STATE_979: "Dhekelia"
