--- a/localisation/braz_por/strategic_region_names_l_braz_por.yml
+++ b/localisation/braz_por/strategic_region_names_l_braz_por.yml
@@ -278,3 +278,4 @@
  STRATEGICREGION_277: "Finlândia Setentrional"
  STRATEGICREGION_278: "Finlândia Ocidental"
  STRATEGICREGION_279: "Golfo de Bótnia"
+ STRATEGICREGION_280: "Chipre"
