--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -4047,26 +4047,6 @@
  LBV_communism_ADJ:0 "Transpadanian"
  LBV_neutrality_ADJ:0 "Lombardo-Venetian"
 
- PAP:0 "Papal States"
- PAP_fascism:0 "Kingdom of God"
- PAP_fascism_DEF:0 "the Kingdom of God"
- PAP_democratic:0 "Roman Republic"
- PAP_democratic_DEF:0 "the Roman Republic"
- PAP_communism:0 "Roman People's Republic"
- PAP_communism_DEF:0 "the Roman People's Republic"
- PAP_neutrality:0 "Papal States"
- PAP_neutrality_DEF:0 "the Papal States"
- PAP_subject:1 "Vatican"
- PAP_subject_DEF:1 "the Vatican State"
- PAP_autonomy_supervised_state:0 "$OVERLORDADJ$ Occupation Zone of Rome"
- PAP_autonomy_supervised_state_DEF:0 "the $OVERLORDADJ$ Occupation Zone of Rome"
- PAP_fascism_ADJ:0 "Papal"
- PAP_democratic_ADJ:0 "Roman"
- PAP_communism_ADJ:0 "Roman"
- PAP_neutrality_ADJ:0 "Papal"
- PAP_subject_ADJ:0 "Vatican"
- PAP_autonomy_supervised_state_ADJ:0 "Roman"
-
  TOS:0 "Grand Duchy of Tuscany"
  TOS_fascism:0 "Etrurian Social Republic"
  TOS_fascism_DEF:0 "the Etrurian Social Republic"
@@ -4199,6 +4179,7 @@
  SSD: "South Sudan"
  SSD_DEF: "South Sudan"
  SSD_ADJ: "South Sudanese"
+ ## North Korea ##
  PRK_communism: "North Korea"
  PRK_communism_DEF: "the North Korea"
  PRK_communism_ADJ: "North Korean"
@@ -4214,6 +4195,7 @@
  PRK: "North Korea"
  PRK_DEF: "the North Korea"
  PRK_ADJ: "North Korean"
+ ## South Korea ##
  KOR_fascism: "South Korean Empire"
  KOR_fascism_DEF: "the South Korean Empire"
  KOR_democratic: "South Korea"
@@ -4229,6 +4211,7 @@
  KOR: "South Korea"
  KOR_DEF: "the South Korea"
  KOR_ADJ: "South Korean"
+ ## Brunei ##
  BRU: "Brunei"
  BRU_DEF: "the Brunei"
  BRU_ADJ: "Brunean"
@@ -4244,9 +4227,34 @@
  BRU_fascism: "Brunei Empire"
  BRU_fascism_DEF: "the Brunei Empire"
  BRU_fascism_ADJ: "Brunean"
+ ## San marino ##
  SMR: "San Marino"
  SMR_DEF: "the San Marino"
  SMR_ADJ: "Sammarinese"
  LIE: "Liechtenstein"
  LIE_DEF: "the Liechtenstein"
  LIE_ADJ: "Liechtensteinian"
+ ## Vatican ##
+ PAP: "Vatican"
+ PAP_fascism: "Kingdom of God"
+ PAP_fascism_DEF: "the Kingdom of God"
+ PAP_democratic: "Roman Republic"
+ PAP_democratic_DEF: "the Roman Republic"
+ PAP_communism: "Popular Roman Republic"
+ PAP_communism_DEF: "the Popular Roman Republic"
+ PAP_neutrality: "Vatican"
+ PAP_neutrality_DEF: "the Vatican"
+ PAP_subject: "Vatican"
+ PAP_subject_DEF: "the Vatican State"
+ PAP_autonomy_supervised_state: "Occupation Zone of the $OVERLORDADJ$ government of Rome"
+ PAP_autonomy_supervised_state_DEF: "the Occupation Zone of the $OVERLORDADJ$ government of Rome"
+ PAP_fascism_ADJ: "Vatican"
+ PAP_democratic_ADJ: "Vatican"
+ PAP_communism_ADJ: "Vatican"
+ PAP_neutrality_ADJ: "Vatican"
+ PAP_subject_ADJ: "Vatican"
+ PAP_autonomy_supervised_state_ADJ: "Vatican"
+ ## Cypus turkish ##
+ RTC: "Turkish Republic of Northern Cyprus"
+ RTC_DEF: "the Turkish Republic of Northern Cyprus"
+ RTC_ADJ: "Turkish Cypriot"
