--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -992,3 +992,6 @@
  STATE_974: "San Marino"
  STATE_975: "Vatican"
  STATE_976: "Liechtenstein"
+ STATE_977: "Northern Cyprus"
+ STATE_978: "Akrotiri"
+ STATE_979: "Dhekelia"
