--- a/localisation/english/strategic_region_names_l_english.yml
+++ b/localisation/english/strategic_region_names_l_english.yml
@@ -278,3 +278,4 @@
  STRATEGICREGION_277: "Northern Finland"
  STRATEGICREGION_278: "Western Finland"
  STRATEGICREGION_279: "Gulf of Bothnia"
+ STRATEGICREGION_280: "Cyprus"
