israel e bahrein feito ta ai
o titulo ja diz tudo ne

--- a/localisation/braz_por/countries_l_braz_por.yml
+++ b/localisation/braz_por/countries_l_braz_por.yml
@@ -4248,3 +4248,11 @@
  PAP_neutrality_ADJ: "Vaticano"
  PAP_subject_ADJ: "Vaticano"
  PAP_autonomy_supervised_state_ADJ: "Vaticano"
+ ## Palestina ##
+ PLE: "Palestina"
+ PLE_DEF: "a Palestina"
+ PLE_ADJ: "Palestino" 
+ ## Bahrein ##
+ BRN: "Bahrein"
+ BRN_DEF: "o Bahrein"
+ BRN_ADJ: "Baremita"
