--- a/localisation/braz_por/state_names_l_braz_por.yml
+++ b/localisation/braz_por/state_names_l_braz_por.yml
@@ -995,3 +995,8 @@
  STATE_977: "Norte do Chipre"
  STATE_978: "Akrotiri"
  STATE_979: "Dhekelia"
+ STATE_980: "Sul do Israel"
+ STATE_981: "Distrito Central"
+ STATE_982: "Faixa de Gaza"
+ STATE_983: "Cisjordânia"
+ STATE_984: "Bahrein"
