--- a/localisation/braz_por/state_names_l_braz_por.yml
+++ b/localisation/braz_por/state_names_l_braz_por.yml
@@ -1000,3 +1000,5 @@
  STATE_982: "Faixa de Gaza"
  STATE_983: "Cisjordânia"
  STATE_984: "Bahrein"
+ STATE_985: "Ossétia do Sul"
+ STATE_986: "Transnístria"
