--- a/localisation/braz_por/victory_points_l_braz_por.yml
+++ b/localisation/braz_por/victory_points_l_braz_por.yml
@@ -1235,3 +1235,17 @@
 
  ## Bahrein ##
  VICTORY_POINTS_13285: "Manama"
+ 
+ ###############
+ ## Caurcasso ##
+ ###############
+
+ ## Ossétia do Sul ##
+ VICTORY_POINTS_1530: "Tsequinváli"
+ 
+ ##########################
+ ## Bessáravia e romênia ##
+ ##########################
+ 
+ ## Transnístria ##
+ VICTORY_POINTS_13296: "Tiráspol"
