--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1000,3 +1000,5 @@
  STATE_982: "Gaza Strip"
  STATE_983: "West Bank"
  STATE_984: "Bahrein"
+ STATE_985: "South Ossetia"
+ STATE_986: "Transnistria"
