--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -1235,3 +1235,17 @@ VICTORY_POINTS_9206_SWE: "Viborg"
 
  ## Bahrein ##
  VICTORY_POINTS_13285: "Manama"
+
+ ###############
+ ## Caurcauss ##
+ ###############
+
+ ##  Ossétia do Sul ##
+ VICTORY_POINTS_1530: "Tsequinval"
+
+ ##########################
+ ## Bessáravia e romênia ##
+ ##########################
+ 
+ ## Transnistria ##
+ VICTORY_POINTS_13296: "Tiráspol"
