--- a/localisation/braz_por/state_names_l_braz_por.yml
+++ b/localisation/braz_por/state_names_l_braz_por.yml
@@ -1002,3 +1002,5 @@
  STATE_984: "Bahrein"
  STATE_985: "Ossétia do Sul"
  STATE_986: "Transnístria"
+ STATE_987: "Lesoto"
+ STATE_988: "Essuatíni"
