--- a/localisation/braz_por/victory_points_l_braz_por.yml
+++ b/localisation/braz_por/victory_points_l_braz_por.yml
@@ -1249,3 +1249,13 @@
  
  ## Transnístria ##
  VICTORY_POINTS_13296: "Tiráspol"
+ 
+ #####################
+ ### África do Sul ###
+ #####################
+ 
+ ## Lesoto ##
+ VICTORY_POINTS_12064: "Maseru"
+
+ ## Essuatíni ##
+ VICTORY_POINTS_7900: "Mebabane"
