--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -4162,115 +4162,279 @@
  JAN: "Jan Mayen"
  JAN_DEF: "the Island of Jan Mayen"
  JAN_ADJ: "Polar"
- 
- # South Sudan #
- SSD_fascism: "South Sudan"
- SSD_fascism_DEF: "South Sudan"
- SSD_democratic: "Republic of Sudan"
- SSD_democratic_DEF: "the Republic of Sudan"
- SSD_neutrality: "South Sudan"
- SSD_neutrality_DEF: "South Sudan"
- SSD_communism: "South Sudan Commune"
- SSD_communism_DEF: "the South Sudan Commune"
- SSD_fascism_ADJ: "South Sudan"
- SSD_democratic_ADJ: "South Sudanese"
- SSD_neutrality_ADJ: "South Sudanese"
- SSD_communism_ADJ: "South Sudanese"
- SSD: "South Sudan"
- SSD_DEF: "South Sudan"
- SSD_ADJ: "South Sudanese"
- ## North Korea ##
- PRK_communism: "North Korea"
- PRK_communism_DEF: "the North Korea"
- PRK_communism_ADJ: "North Korean"
- PRK_democratic: "Democratic People's Republic of Korea"
- PRK_democratic_DEF: "the Democratic People's Republic of Korea"
- PRK_democratic_ADJ: "North Korean"
- PRK_fascism: "Korean Empire"
- PRK_fascism_DEF: "the Korean Empire"
- PRK_fascism_ADJ: "North Korean"
- PRK_neutrality: "North Korea"
- PRK_neutrality_DEF: "the North Korea"
- PRK_neutrality_ADJ: "North Korean"
- PRK: "North Korea"
- PRK_DEF: "the North Korea"
- PRK_ADJ: "North Korean"
- ## South Korea ##
- KOR_fascism: "South Korean Empire"
- KOR_fascism_DEF: "the South Korean Empire"
- KOR_democratic: "South Korea"
- KOR_democratic_DEF: "the South Korea"
- KOR_neutrality: "Republic of Korea"
- KOR_neutrality_DEF: "the Republic of Korea"
- KOR_communism: "Democratic People's Republic of Korea"
- KOR_communism_DEF: "the Democratic People's Republic of Korea"
- KOR_fascism_ADJ: "South Korean"
- KOR_democratic_ADJ: "South Korean"
- KOR_neutrality_ADJ: "South Korean"
- KOR_communism_ADJ: "South Korean"
- KOR: "South Korea"
- KOR_DEF: "the South Korea"
- KOR_ADJ: "South Korean"
- ## Brunei ##
- BRU: "Brunei"
- BRU_DEF: "the Brunei"
- BRU_ADJ: "Brunean"
- BRU_neutrality: "Brunei"
- BRU_neutrality_DEF: "the Brunei"
- BRU_neutrality_ADJ: "Brunean"
- BRU_communism: "People's Republic of Brunei"
- BRU_communism_DEF: "the People's Republic of Brunei"
- BRU_communism_ADJ: "Brunean"
- BRU_democratic: "Republic of Brunei"
- BRU_democratic_DEF: "the Republic of Brunei"
- BRU_democratic_ADJ: "Brunean"
- BRU_fascism: "Brunei Empire"
- BRU_fascism_DEF: "the Brunei Empire"
- BRU_fascism_ADJ: "Brunean"
- ## San marino ##
- SMR: "San Marino"
- SMR_DEF: "the San Marino"
- SMR_ADJ: "Sammarinese"
- LIE: "Liechtenstein"
- LIE_DEF: "the Liechtenstein"
- LIE_ADJ: "Liechtensteinian"
- ## Vatican ##
- PAP: "Vatican"
- PAP_fascism: "Kingdom of God"
- PAP_fascism_DEF: "the Kingdom of God"
- PAP_democratic: "Roman Republic"
- PAP_democratic_DEF: "the Roman Republic"
- PAP_communism: "Popular Roman Republic"
- PAP_communism_DEF: "the Popular Roman Republic"
- PAP_neutrality: "Vatican"
- PAP_neutrality_DEF: "the Vatican"
- PAP_subject: "Vatican"
- PAP_subject_DEF: "the Vatican State"
- PAP_autonomy_supervised_state: "Occupation Zone of the $OVERLORDADJ$ government of Rome"
- PAP_autonomy_supervised_state_DEF: "the Occupation Zone of the $OVERLORDADJ$ government of Rome"
- PAP_fascism_ADJ: "Vatican"
- PAP_democratic_ADJ: "Vatican"
- PAP_communism_ADJ: "Vatican"
- PAP_neutrality_ADJ: "Vatican"
- PAP_subject_ADJ: "Vatican"
- PAP_autonomy_supervised_state_ADJ: "Vatican"
- ## Cypus turkish ##
- RTC: "Turkish Republic of Northern Cyprus"
- RTC_DEF: "the Turkish Republic of Northern Cyprus"
- RTC_ADJ: "Turkish Cypriot"
- ## Palestine ##
- PLE: "Palestine"
- PLE_DEF: "the Palestine"
- PLE_ADJ: "Palestinian"
- ## Bahrein ##
- BRN: "Bahrain"
- BRN_DEF: "the Bahrain"
- BRN_ADJ: "Bahraini"
- ## Ossétia do Sul ##
- RSO: "South Ossetia"
- RSO_DEF: "the South Ossetia"
- RSO_ADJ: "Ossetians"
- ## Transnístria ##
- RMP: "Transnistria"
- RMP_DEF: "Transnistria"
- RMP_ADJ: "Transnistrian"
+
+###################################
+## mod we are developing ##
+###################################
+
+#####################
+## North Africa ##
+#####################
+
+## South Sudan ##
+SSD_fascism: "South Sudan"
+SSD_fascism_DEF: "the South Sudan"
+SSD_democratic: "Republic of Sudan"
+SSD_democratic_DEF: "the Republic of Sudan"
+SSD_neutrality: "South Sudan"
+SSD_neutrality_DEF: "the South Sudan"
+SSD_communism: "South Sudan Commune"
+SSD_communism_DEF: "the South Sudan Commune"
+SSD_fascism_ADJ: "South Sudan"
+SSD_democratic_ADJ: "South Sudanese"
+SSD_neutrality_ADJ: "South Sudanese"
+SSD_communism_ADJ: "South Sudanese"
+SSD: "South Sudan"
+SSD_DEF: "the South Sudan"
+SSD_ADJ: "South Sudanese"
+
+####################
+## Central Africa ##
+####################
+
+## DR. Congo ##
+COG_fascism: "Central African Empire"
+COG_fascism_DEF: "the Central African Empire"
+COG_democratic: "Eastern Congo Republic"
+COG_democratic_DEF: "the Eastern Congo Republic"
+COG_neutrality: "Democratic Republic of the Congo"
+COG_neutrality_DEF: "the Democratic Republic of the Congo"
+COG_communism: "Democratic Republic of the Congo"
+COG_communism_DEF: "the Democratic Republic of the Congo"
+COG_fascism_ADJ: "Congolese"
+COG_democratic_ADJ: "Congolese"
+COG_neutrality_ADJ: "Congolese"
+COG_communism_ADJ: "Congolese"
+COG: "Democratic Republic of the Congo"
+COG_DEF: "the Democratic Republic of the Congo"
+COG_ADJ: "Congolese"
+
+####################
+## East Africa ##
+####################
+
+## Somalia ##
+SOM_fascism: "Ajuraan Empire"
+SOM_fascism_DEF: "the Ajuraan Empire"
+SOM_democratic: "Somalia"
+SOM_democratic_DEF: "Somalia"
+SOM_neutrality: "Somalia"
+SOM_neutrality_DEF: "Somalia"
+SOM_communism: "Democratic Republic of Somalia"
+SOM_communism_DEF: "the Democratic Republic of Somalia"
+SOM_fascism_ADJ: "Ajuraan"
+SOM_democratic_ADJ: "Somali"
+SOM_neutrality_ADJ: "Somali"
+SOM_communism_ADJ: "Somali"
+SOM: "Somalia"
+SOM_DEF: "Somalia"
+SOM_ADJ: "Somali"
+
+####################
+## West Africa ##
+####################
+
+## Burkina Faso ##
+VOL_fascism: "Upper Volta Authority"
+VOL_fascism_DEF: "the Upper Volta Authority"
+VOL_democratic: "Burkina Faso"
+VOL_democratic_DEF: "Burkina Faso"
+VOL_neutrality: "Burkina Faso"
+VOL_neutrality_DEF: "Burkina Faso"
+VOL_communism: "Socialist Republic of Upper Volta"
+VOL_communism_DEF: "the Socialist Republic of Upper Volta"
+VOL_fascism_ADJ: "Burkinabe"
+VOL_democratic_ADJ: "Burkinabe"
+VOL_neutrality_ADJ: "Burkinabe"
+VOL_communism_ADJ: "Burkinabe"
+VOL: "Burkina Faso"
+VOL_DEF: "Burkina Faso"
+VOL_ADJ: "Burkinabe"
+
+##################
+## South African ##
+##################
+
+## Lesotho ##
+LES: "Lesotho"
+LES_DEF: "Lesotho"
+LES_ADJ: "Basotho"
+
+## Eswatini ##
+SWZ: "Eswatini"
+SWZ_DEF: "Eswatini"
+SWZ_ADJ: "Swazi"
+
+####################
+## Central Europe ##
+####################
+
+## Czech Republic ##
+CZE_fascism: "Bohemian Empire"
+CZE_fascism_DEF: "the Bohemian Empire"
+CZE_democratic: "Czechia"
+CZE_democratic_DEF: "Czechia"
+CZE_neutrality: "Kingdom of Bohemia"
+CZE_neutrality_DEF: "the Kingdom of Bohemia"
+CZE_communism: "Socialist Republic of Czechoslovakia"
+CZE_communism_DEF: "the Czechoslovak Union"
+CZE_fascism_ADJ: "Czech"
+CZE_democratic_ADJ: "Czechoslovak"
+CZE_neutrality_ADJ: "Czechoslovak"
+CZE_communism_ADJ: "Czechoslovak"
+CZE: "Czechoslovakia"
+CZE_DEF: "Czechoslovakia"
+CZE_ADJ: "Czechoslovak"
+CZE_subject: "$CZE$ government $OVERLORDADJ$"
+CZE_subject_DEF: "the $CZE$ government $OVERLORDADJ$"
+
+## Germany ##
+GER_fascism: "German Reich"
+GER_fascism_DEF: "the German Reich"
+GER_democratic: "Germany"
+GER_democratic_DEF: "Germany"
+GER_neutrality: "German Empire"
+GER_neutrality_DEF: "the German Empire"
+GER_communism: "Socialist Republic of Germany"
+GER_communism_DEF: "the Socialist Republic of Germany"
+GER_fascism_ADJ: "German"
+GER_democratic_ADJ: "German"
+GER_neutrality_ADJ: "German"
+GER_communism_ADJ: "German"
+GER_autonomy_supervised_state: "Government $OVERLORDADJ$ Occupation Zone"
+GER_autonomy_supervised_state_DEF: "the $OVERLORDADJ$ government Occupation Zone"
+GER_autonomy_puppet: "$OVERLORDADJ$ Government Germany"
+GER_autonomy_puppet_DEF: "$OVERLORDADJ$ Government Germany"
+GER_SOV_communism_autonomy_puppet: "Government $OVERLORDADJ$ Occupation Zone in Germany"
+GER_SOV_communism_autonomy_puppet_DEF: "the $OVERLORDADJ$ government Occupation Zone in Germany"
+GER_SOV_communism_autonomy_puppet_ADJ: "$OVERLORDADJ$ German"
+GER: "Germany"
+GER_DEF: "Germany"
+GER_ADJ: "German"
+
+## Liechtenstein ##
+LIE: "Liechtenstein"
+LIE_DEF: "Liechtenstein"
+LIE_ADJ: "Liechtenstein"
+
+#################
+## Southern Europe ##
+#################
+
+## San Marino ##
+SMR: "San Marino"
+SMR_DEF: "San Marino"
+SMR_ADJ: "Sammarinese"
+
+## Turkish Republic of Northern Cyprus ##
+RTC: "Turkish Republic of Northern Cyprus"
+RTC_DEF: "the Turkish Republic of Northern Cyprus"
+RTC_ADJ: "Turkish Cypriot"
+
+## Vatican ##
+PAP: "Vatican"
+PAP_fascism: "Kingdom of God"
+PAP_fascism_DEF: "the Kingdom of God"
+PAP_democratic: "Roman Republic"
+PAP_democratic_DEF: "the Roman Republic"
+PAP_communism: "Roman People's Republic"
+PAP_communism_DEF: "the Roman People's Republic"
+PAP_neutrality: "Vatican"
+PAP_neutrality_DEF: "the Vatican"
+PAP_subject: "Vatican"
+PAP_subject_DEF: "the Vatican"
+PAP_autonomy_supervised_state: "$OVERLORDADJ$ Government Rome Occupation Zone"
+PAP_autonomy_supervised_state_DEF: "the $OVERLORDADJ$ government Rome Occupation Zone"
+PAP_fascism_ADJ: "Vatican"
+PAP_democratic_ADJ: "Vatican"
+PAP_communism_ADJ: "Vatican"
+PAP_neutrality_ADJ: "Vatican"
+PAP_subject_ADJ: "Vatican"
+PAP_autonomy_supervised_state_ADJ: "Vatican"
+
+###################
+## Eastern Europe ##
+###################
+
+## Transnistria ##
+RMP: "Transnistria"
+RMP_DEF: "Transnistria"
+RMP_ADJ: "Transnistrian"
+
+#####################
+## Far East ##
+#####################
+
+## North Korea ##
+PRK_communism: "North Korea"
+PRK_communism_DEF: "North Korea"
+PRK_communism_ADJ: "North Korean"
+PRK_democratic: "Democratic People's Republic of Korea"
+PRK_democratic_DEF: "the Democratic People's Republic of Korea"
+PRK_democratic_ADJ: "North Korean"
+PRK_fascism: "Korean Empire"
+PRK_fascism_DEF: "the Korean Empire"
+PRK_fascism_ADJ: "North Korean"
+PRK_neutrality: "North Korea"
+PRK_neutrality_DEF: "North Korea"
+PRK_neutrality_ADJ: "North Korean"
+PRK: "North Korea"
+PRK_DEF: "North Korea"
+PRK_ADJ: "North Korean"
+
+## South Korea ##
+KOR_fascism: "South Korean Empire"
+KOR_fascism_DEF: "the South Korean Empire"
+KOR_democratic: "South Korea"
+KOR_democratic_DEF: "South Korea"
+KOR_neutrality: "Republic of Korea"
+KOR_neutrality_DEF: "the Republic of Korea"
+KOR_communism: "Democratic Republic of Korea"
+KOR_communism_DEF: "the Democratic Republic of Korea"
+KOR_fascism_ADJ: "South Korean"
+KOR_democratic_ADJ: "South Korean"
+KOR_neutrality_ADJ: "South Korean"
+KOR_communism_ADJ: "South Korean"
+KOR: "South Korea"
+KOR_DEF: "South Korea"
+KOR_ADJ: "South Korean"
+
+######################
+## Southeast Asia ##
+######################
+
+## Brunei ##
+BRU: "Brunei"
+BRU_DEF: "Brunei"
+BRU_ADJ: "Bruneian"
+BRU_neutrality: "Brunei"
+BRU_neutrality_DEF: "Brunei"
+BRU_neutrality_ADJ: "Bruneian"
+BRU_communism: "People's Republic of Brunei"
+BRU_communism_DEF: "the People's Republic of Brunei"
+BRU_communism_ADJ: "Bruneian"
+BRU_democratic: "Republic of Brunei"
+BRU_democratic_DEF: "the Republic of Brunei"
+BRU_democratic_ADJ: "Bruneian"
+BRU_fascism: "Brunei Empire"
+BRU_fascism_DEF: "the Brunei Empire"
+BRU_fascism_ADJ: "Bruneian"
+
+###################
+## Middle East ##
+###################
+
+## Palestine ##
+PLE: "Palestine"
+PLE_DEF: "Palestine"
+PLE_ADJ: "Palestinian"
+
+## Bahrain ##
+BRN: "Bahrain"
+BRN_DEF: "Bahrain"
+BRN_ADJ: "Bahraini"
+
+## South Ossetia ##
+RSO: "South Ossetia"
+RSO_DEF: "South Ossetia"
+RSO_ADJ: "Ossetian"
