Brasil: erros corrigidos

--- a/localisation/braz_por/state_names_l_braz_por.yml
+++ b/localisation/braz_por/state_names_l_braz_por.yml
@@ -1139,7 +1139,7 @@
  STATE_962: "Amazônia" #impassables
  STATE_963: "Paraíba"  #Amazonia impassável 
  STATE_964: "Amazônia" #impassables
- STATE_965: "Amazônia" #impassables
+ STATE_965: "Sergipe" #Amazonia impassables
  STATE_966: "Amazônia" #impassables
  STATE_967: "Amazônia" #impassables
  STATE_968: "Amazônia" #impassables
